from PIL import Image
from django.contrib.auth import get_user_model
from django.db import models

from courses.models import CourseTag


class UserSitePreferences(models.Model):
    class ColorTheme(models.TextChoices):
        RED = "red", "Red"
        PINK = "pink", "Pink"
        FUCHSIA = "fuchsia", "Fuchsia"
        PURPLE = "purple", "Purple"
        VIOLET = "violet", "Violet"
        INDIGO = "indigo", "Indigo"
        BLUE = "blue", "Blue"
        AZURE = "", "Azure"
        CYAN = "cyan", "Cyan"
        JADE = "jade", "Jade"
        GREEN = "green", "Green"
        LIME = "lime", "Lime"
        YELLOW = "yellow", "Yellow"
        AMBER = "amber", "Amber"
        PUMPKIN = "pumpkin", "Pumpkin"
        ORANGE = "orange", "Orange"
        SAND = "sand", "Sand"
        GRAY = "gray", "Gray"
        ZINC = "zinc", "Zinc"
        SLATE = "slate", "Slate"

    class ThemeMode(models.TextChoices):
        LIGHT = "light", "Light"
        DARK = "dark", "Dark"
        SYSTEM = "", "System"

    user = models.OneToOneField(get_user_model(), related_name="preferences", on_delete=models.CASCADE)
    theme_mode = models.CharField(max_length=20, blank=True, default="", choices=ThemeMode.choices)
    color_theme = models.CharField(max_length=20, default="pumpkin", blank=True, choices=ColorTheme.choices)
    profile_picture = models.ImageField(upload_to="profile_pictures/", blank=True, null=True)
    receive_notifications = models.BooleanField(default=True)
    preferred_tags = models.ManyToManyField(CourseTag, related_name="preferred_by_users", blank=True)

    class Meta:
        verbose_name = "User Preference"
        verbose_name_plural = "User Preferences"

    def __str__(self) -> str:
        return f"Preferences for {self.user.username}"

    def save(self, *args, **kwargs):
        super().save(*args, **kwargs)
        profile_image = Image.open(self.profile_picture.path)
        image_width, image_height = profile_image.size
        max_full_size = 300
        max_thumbnail_size = 48
        if image_width > max_full_size or image_height > max_full_size:
            profile_image = profile_image.crop(
                (
                    (image_width - max_full_size) // 2,
                    (image_height - max_full_size) // 2,
                    (image_width + max_full_size) // 2,
                    (image_height + max_full_size) // 2,
                )
            )
        if image_width > max_thumbnail_size or image_height > max_thumbnail_size:
            profile_image.thumbnail((max_thumbnail_size, max_thumbnail_size))
        profile_image.save(self.profile_picture.path)
