erDiagram
    USER ||--|| USER_SITE_PREFERENCES : "are"
    USER ||--o{ PURCHASE : "efectuează"
    USER ||--o{ MODULE_PROGRESSION : "urmărește"
    USER ||--o{ QUIZ_ATTEMPT : "completează"
    USER ||--o{ COURSE : "publică"

    COURSE ||--o{ PURCHASE : "este obiectul"
    COURSE ||--o{ MODULE : "conține"

    MODULE ||--o{ MODULE_PROGRESSION : "este urmărit prin"
    MODULE ||--o| QUIZ : "poate avea"

    QUIZ ||--o{ QUIZ_ATTEMPT : "este evaluat prin"

    USER_SITE_PREFERENCES }o--o{ COURSE_TAG : "preferă"

    USER {
        int id PK
        string username
        string email
        string first_name
        string last_name
    }
    USER_SITE_PREFERENCES {
        int id PK
        int user_id FK
        string theme_mode
        string color_theme
        image profile_picture
        boolean receive_notifications
    }
    MODULE_PROGRESSION {
        int id PK
        int user_id FK
        int module_id FK
        boolean completed
        datetime completion_date
    }
    QUIZ_ATTEMPT {
        int id PK
        int user_id FK
        int quiz_id FK
        decimal grade
        datetime completion_date
    }
    PURCHASE {
        int id PK
        int user_id FK
        int course_id FK
        decimal amount
        string stripe_payment_id
        string state
        datetime purchase_date
    }
    COURSE_TAG {
        int id PK
        string name
    }
